--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "shared": "file:../shared",
     "-": "^0.0.1",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -20,7 +20,13 @@
     "mysql2": "^3.10.1",
     "nodemon": "^3.1.3",
     "save-dev": "^0.0.1-security",
+    "shared": "file:../shared",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/express": "^5.0.0",
+    "@types/express-session": "^1.18.0"
   }
 }
