--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -5,7 +5,8 @@
       "target": "es2021",
       "moduleResolution": "node",
       "sourceMap": true,
-      "outDir": "dist"
+      "outDir": "dist",
+      "typeRoots": ["./src/types"]
     },
     "lib": ["es2021"]
     }
